 - Extended tclConfig.sh search paths so it hopefully works on Ubuntu now.
 - Reloads scrollback.
 - Fixed /LASTLOG printing everything twice if you had Indented Nicks off.
 - The CTRL-F keybinding (Find) is now disabled when using Emacs keys.
 - Added /SET gui_tweaks [FIXME explain it].
 - Fixed opening URLs on KDE that didn't begin with http://.
 - 
 - 
 - The userlist and treeview can now be placed on the same side, with a resize
   handle in between them. They can also be dragged and dropped into place.
 - When you hide the userlist using the View menu, the resize handle now
   disappears too. It also disappears when you have a server tab in focus.
 - If you have a tree on one side and userlist on the other, they'll both now
   have a resize handle, previously the tree's size was fixed.
 - The userlist can be hidden and shown with CTRL+F7.
 - 
 -  
 - 
 - 
 - Script and Plugin related changes:
  * /SETTEXT with no argument now clears the input box.
  * Python: Added a xchat.strip method for stripping IRC attributes and mIRC
    color codes.
  * C-API and Perl: Returning 0 from a FD hook will now remove the hook and
    free all associated memory.
  * /MENU now supports a $CHAN root aswell (see plugin20.html).
  * Fixed GDK warning when using /MENU to add a key binding to a popup menu.


------------------------------------------------------------------------------
 2.8.2 - 01/Apr/2007
------------------------------------------------------------------------------

 - Updated translations (be, ca, cs, el, hu, sv, uk, zh_CN).
 - Fixed the "Save As" function saving to the wrong folder in the URL Grabber.
 - Fixed a bug in the "Copy Selected Link" URL right-click on non-ASCII chars.
 - Fixed small bug: #100239 buffer overflow in setup dialog.
 - Overhauled the Alerts section of the settings and added support for opening
   system-tray balloons (libnotify required).
 - Implemented /TRAY -b command on unix.